--- a/final231.html
+++ b/final231.html
@@ -9,33 +9,24 @@
     <link rel="stylesheet" href="https://use.typekit.net/awd7jbn.css"/>
 </head>
 <body>
-    <div class="push_right">
+    <div class="center_flex">
+            <button class="resize" id="scorpio"><img src="images/romanesque.png" class="resize"></button>
+            <button class="resize" id="aquarius"><img src="images/bahaus.png" class="resize"></button>
+            <button class="resize" id="cancer"><img src="images/deconstructionist.png" class="resize"></button>
+            <button class="resize" id="sagitarius"><img src="images/postmodernism.png" class="resize"></button>
+            <button class="resize" id="capricorn"><img src="images/contemporary.png" class="resize"></button>
+            <button class="resize" id="gemini"><img src="images/pueblo.png" class="resize"></button>
+        </div>
+        
+            <div class="push_right">
         <div class="popup" onclick="myHelp()">Need Help?
-            <span class="popuptext" id="myPopup">Enter first, last name, and birthday (mm/dd/yyyy) or click one of the images to see a zodiac! </span>
+            <span class="popuptext" id="myPopup">Enter your birthday (mm/dd/yyyy) or click one of the images to see a zodiac! </span>
         </div>
     </div>
 
-    <div class="center_flex">
-
-        <button class="resize" id="taurus"><img src="images/industrial.png" class="resize"></button>
-        <button class="resize" id="leo"><img src="images/artdeco2.png" class="resize"></button>
-        <button class="resize" id="virgo"><img src="images/modern.png" class="resize"></button>
-        <button class="resize" id="aries"><img src="images/brutalist.png" class="resize"></button>
-        <button class="resize" id="pisces"><img src="images/gothic.png" class="resize"></button>
-        <button class="resize" id="libra"><img src="images/colonial.png" class="resize"></button>
-        <button class="resize" id="scorpio"><img src="images/romanesque.png" class="resize"></button>
-        <button class="resize" id="aquarius"><img src="images/bahaus.png" class="resize"></button>
-        <button class="resize" id="cancer"><img src="images/deconstructionist.png" class="resize"></button>
-        <button class="resize" id="sagitarius"><img src="images/postmodernism.png" class="resize"></button>
-    </div>
-
     <h1> Architecture Zodiac </h1>
-    <h2>Find Out what your Architecture Style is!</h2>
+    <h2>What Architecture Style are you?</h2>
         <form action="/action_page.php">
-            <label for="fname">First name:</label>
-            <input type="text" id="fname" name="fname"><br><br>
-            <label for="lname">Last name:</label>
-            <input type="text" id="lname" name="lname"><br><br>
             <label for="birthdayInput">Birthday:</label>
             <input id="birthdayInput" class ="js-date-input" type="date" name="birthday"><br><br>
             <button class="js-submit-button" type="button">Submit</button>
@@ -43,6 +34,16 @@
     
         <div data-content-area>
           <p date-content-area class="date"></p>
+        </div>
+
+        <div class="center_flex">
+
+            <button class="resize" id="taurus"><img src="images/industrial.png" class="resize"></button>
+            <button class="resize" id="leo"><img src="images/artdeco2.png" class="resize"></button>
+            <button class="resize" id="virgo"><img src="images/modern.png" class="resize"></button>
+            <button class="resize" id="aries"><img src="images/brutalist.png" class="resize"></button>
+            <button class="resize" id="pisces"><img src="images/gothic.png" class="resize"></button>
+            <button class="resize" id="libra"><img src="images/colonial.png" class="resize"></button>
         </div>
 
         <script src="finalproject.js"></script>
