--- a/final231.html
+++ b/final231.html
@@ -9,15 +9,22 @@
     <link rel="stylesheet" href="https://use.typekit.net/awd7jbn.css"/>
 </head>
 <body>
+
     <div class="center_flex">
-            <button class="resize" id="scorpio"><img src="images/romanesque.png" class="resize"></button>
-            <button class="resize" id="aquarius"><img src="images/bahaus.png" class="resize"></button>
-            <button class="resize" id="cancer"><img src="images/deconstructionist.png" class="resize"></button>
-            <button class="resize" id="sagitarius"><img src="images/postmodernism.png" class="resize"></button>
-            <button class="resize" id="capricorn"><img src="images/contemporary.png" class="resize"></button>
-            <button class="resize" id="gemini"><img src="images/pueblo.png" class="resize"></button>
+        <!-- scorpio -->
+            <button class="resize" data-audio-file="coin.mp3"> <img src="images/romanesque.png" class="resize"></button>
+        <!-- aquarius -->
+            <button class="resize" data-audio-file="coin.mp3"> <img src="images/bahaus.png" class="resize"></button>
+        <!-- cancer -->
+            <button class="resize" data-audio-file="coin.mp3"> <img src="images/deconstructionist.png" class="resize"></button>
+        <!-- sagitarius -->
+            <button class="resize" data-audio-file="coin.mp3"> <img src="images/postmodernism.png" class="resize"></button>
+        <!-- capricorn -->
+            <button class="resize" data-audio-file="coin.mp3"> <img src="images/contemporary.png" class="resize"></button>
+        <!-- gemini -->
+            <button class="resize" data-audio-file="coin.mp3"> <img src="images/pueblo.png" class="resize"></button>
         </div>
-        
+
             <div class="push_right">
         <div class="popup" onclick="myHelp()">Need Help?
             <span class="popuptext" id="myPopup">Enter your birthday (mm/dd/yyyy) or click one of the images to see a zodiac! </span>
@@ -37,15 +44,21 @@
         </div>
 
         <div class="center_flex">
-
-            <button class="resize" id="taurus"><img src="images/industrial.png" class="resize"></button>
-            <button class="resize" id="leo"><img src="images/artdeco2.png" class="resize"></button>
-            <button class="resize" id="virgo"><img src="images/modern.png" class="resize"></button>
-            <button class="resize" id="aries"><img src="images/brutalist.png" class="resize"></button>
-            <button class="resize" id="pisces"><img src="images/gothic.png" class="resize"></button>
-            <button class="resize" id="libra"><img src="images/colonial.png" class="resize"></button>
+            <!-- taurus -->
+            <button class="resize" data-audio-file="coin.mp3"><img src="images/industrial.png" class="resize"></button> 
+            <!-- leo -->
+            <button class="resize" data-audio-file="coin.mp3"> <img src="images/artdeco2.png" class="resize"></button> 
+            <!-- virgo -->
+            <button class="resize" data-audio-file="coin.mp3"> <img src="images/modern.png" class="resize"></button>
+            <!-- aries -->
+            <button class="resize" data-audio-file="coin.mp3"> <img src="images/brutalist.png" class="resize"></button>
+            <!-- pisces -->
+            <button class="resize" data-audio-file="coin.mp3"> <img src="images/gothic.png" class="resize"></button>
+            <!-- libra -->
+            <button class="resize" data-audio-file="coin.mp3"> <img src="images/colonial.png" class="resize"></button>
         </div>
-
+        
+            <audio id="speakers"></audio>
         <script src="finalproject.js"></script>
 
 </body>
