--- a/final231.html
+++ b/final231.html
@@ -12,17 +12,17 @@
 
     <div class="center_flex">
         <!-- scorpio -->
-            <button class="resize" data-audio-file="coin.mp3"> <img src="images/romanesque.png" class="resize"></button>
+            <button class="resize" data-audio-file="ding2.mp3"> <img src="images/romanesque.png" class="resize"></button>
         <!-- aquarius -->
-            <button class="resize" data-audio-file="coin.mp3"> <img src="images/bahaus.png" class="resize"></button>
+            <button class="resize" data-audio-file="windowsding.mp3"> <img src="images/bahaus.png" class="resize"></button>
         <!-- cancer -->
-            <button class="resize" data-audio-file="coin.mp3"> <img src="images/deconstructionist.png" class="resize"></button>
+            <button class="resize" data-audio-file="ding3.mp3"> <img src="images/deconstructionist.png" class="resize"></button>
         <!-- sagitarius -->
-            <button class="resize" data-audio-file="coin.mp3"> <img src="images/postmodernism.png" class="resize"></button>
+            <button class="resize" data-audio-file="fbmessenger.mp3"> <img src="images/postmodernism.png" class="resize"></button>
         <!-- capricorn -->
-            <button class="resize" data-audio-file="coin.mp3"> <img src="images/contemporary.png" class="resize"></button>
+            <button class="resize" data-audio-file="priceding.mp3"> <img src="images/contemporary.png" class="resize"></button>
         <!-- gemini -->
-            <button class="resize" data-audio-file="coin.mp3"> <img src="images/pueblo.png" class="resize"></button>
+            <button class="resize" data-audio-file="taco.mp3"> <img src="images/pueblo.png" class="resize"></button>
         </div>
 
             <div class="push_right">
@@ -45,17 +45,17 @@
 
         <div class="center_flex">
             <!-- taurus -->
-            <button class="resize" data-audio-file="coin.mp3"><img src="images/industrial.png" class="resize"></button> 
+            <button class="resize" data-audio-file="ding4.mp3"> <img src="images/industrial.png" class="resize"></button> 
             <!-- leo -->
-            <button class="resize" data-audio-file="coin.mp3"> <img src="images/artdeco2.png" class="resize"></button> 
+            <button class="resize" data-audio-file="vibrate.mp3"> <img src="images/artdeco2.png" class="resize"></button> 
             <!-- virgo -->
-            <button class="resize" data-audio-file="coin.mp3"> <img src="images/modern.png" class="resize"></button>
+            <button class="resize" data-audio-file="dingsing.mp3"> <img src="images/modern.png" class="resize"></button>
             <!-- aries -->
-            <button class="resize" data-audio-file="coin.mp3"> <img src="images/brutalist.png" class="resize"></button>
+            <button class="resize" data-audio-file="seatbelt.mp3"> <img src="images/brutalist.png" class="resize"></button>
             <!-- pisces -->
-            <button class="resize" data-audio-file="coin.mp3"> <img src="images/gothic.png" class="resize"></button>
+            <button class="resize" data-audio-file="ding5.mp3"> <img src="images/gothic.png" class="resize"></button>
             <!-- libra -->
-            <button class="resize" data-audio-file="coin.mp3"> <img src="images/colonial.png" class="resize"></button>
+            <button class="resize" data-audio-file="doording.mp3"> <img src="images/colonial.png" class="resize"></button>
         </div>
         
             <audio id="speakers"></audio>
