--- a/final231.html
+++ b/final231.html
@@ -11,18 +11,18 @@
 <body>
 
     <div class="center_flex">
-        <!-- scorpio -->
-            <button class="resize" data-audio-file="ding2.mp3"> <img src="images/romanesque.png" class="resize"></button>
-        <!-- aquarius -->
-            <button class="resize" data-audio-file="windowsding.mp3"> <img src="images/bahaus.png" class="resize"></button>
-        <!-- cancer -->
-            <button class="resize" data-audio-file="ding3.mp3"> <img src="images/deconstructionist.png" class="resize"></button>
-        <!-- sagitarius -->
-            <button class="resize" data-audio-file="fbmessenger.mp3"> <img src="images/postmodernism.png" class="resize"></button>
         <!-- capricorn -->
-            <button class="resize" data-audio-file="priceding.mp3"> <img src="images/contemporary.png" class="resize"></button>
-        <!-- gemini -->
-            <button class="resize" data-audio-file="taco.mp3"> <img src="images/pueblo.png" class="resize"></button>
+        <button class="resize one" id="contemporary" data-audio-file="priceding.mp3"> <img src="images/contemporary.png">capricorn</button>
+       <!-- aquarius -->
+       <button class="resize two" id="bahaus" data-audio-file="windowsding.mp3"> <img src="images/bahaus.png">aquarius</button>
+        <!-- pisces -->
+        <button class="resize three" id="gothic" data-audio-file="ding5.mp3"> <img src="images/gothic.png">pisces</button>
+       <!-- aries -->
+        <button class="resize four" id="brutalist" data-audio-file="seatbelt.mp3"> <img src="images/brutalist.png">aries</button>
+         <!-- taurus -->
+         <button class="resize five" id="industrial" data-audio-file="ding4.mp3"> <img src="images/industrial.png">taurus</button>
+          <!-- gemini -->
+          <button class="resize six" id="pueblo" data-audio-file="taco.mp3"> <img src="images/pueblo.png"> gemini</button>
         </div>
 
             <div class="push_right">
@@ -35,8 +35,8 @@
     <h2>What Architecture Style are you?</h2>
         <form action="/action_page.php">
             <label for="birthdayInput">Birthday:</label>
-            <input id="birthdayInput" class ="js-date-input" type="date" name="birthday"><br><br>
-            <button class="js-submit-button" type="button">Submit</button>
+            <input id="birthdayInput" type="date" name="birthday" required>
+            <button class="js-submit-button" type="button" id="userSubmit">Submit</button>
         </form>
     
         <div data-content-area>
@@ -44,21 +44,40 @@
         </div>
 
         <div class="center_flex">
-            <!-- taurus -->
-            <button class="resize" data-audio-file="ding4.mp3"> <img src="images/industrial.png" class="resize"></button> 
+            <!-- cancer -->
+            <button class="resize seven" id="deconstructionist" data-audio-file="ding3.mp3"> <img src="images/deconstructionist.png">cancer</button>
             <!-- leo -->
-            <button class="resize" data-audio-file="vibrate.mp3"> <img src="images/artdeco2.png" class="resize"></button> 
+            <button class="resize eight" id="artdeco2" data-audio-file="vibrate.mp3"> <img src="images/artdeco2.png">leo</button> 
             <!-- virgo -->
-            <button class="resize" data-audio-file="dingsing.mp3"> <img src="images/modern.png" class="resize"></button>
-            <!-- aries -->
-            <button class="resize" data-audio-file="seatbelt.mp3"> <img src="images/brutalist.png" class="resize"></button>
-            <!-- pisces -->
-            <button class="resize" data-audio-file="ding5.mp3"> <img src="images/gothic.png" class="resize"></button>
+            <button class="resize nine" id="modern" data-audio-file="dingsing.mp3"> <img src="images/modern.png">virgo</button>
             <!-- libra -->
-            <button class="resize" data-audio-file="doording.mp3"> <img src="images/colonial.png" class="resize"></button>
+            <button class="resize ten" id="colonial" data-audio-file="doording.mp3"> <img src="images/colonial.png">libra</button>
+            <!-- scorpio -->
+            <button class="resize eleven" id="romanesque" data-audio-file="ding2.mp3"> <img src="images/romanesque.png">scorpio</button>
+        <!-- sagitarius -->
+            <button class="resize twelve" id="postmodernism" data-audio-file="fbmessenger.mp3"> <img src="images/postmodernism.png">sagitarius</button>
         </div>
         
             <audio id="speakers"></audio>
+
+        <!-- Modal (modal is initially hidden)-->
+  <div id="modal" class="modal" hidden>
+    <div class="modal-body">
+      <div class="modal-content">
+        <div>
+          <img id="zDisplayImg" src="images/contemporary.png" alt="blank">
+        </div>
+        <p class="titleAndDate">
+          <span id="zTitle">Title</span> <br> <span id="zDateRange">Date Range</span>
+        </p>
+        <div id="zMoreInfo">
+          <p>Architectural style description</p>
+        </div>
+        <button id="btn-modal-close" class="toggle-modal">Close</button>
+      </div>
+    </div>
+    <div class="blanket"></div>
+  </div>
         <script src="finalproject.js"></script>
 
 </body>
