--- a/final231.html
+++ b/final231.html
@@ -17,7 +17,7 @@
         <!-- capricorn -->
         <button class="resize one" id="contemporary" data-audio-file="priceding.mp3"> <img src="images/contemporary.png">capricorn</button>
        <!-- aquarius -->
-       <button class="resize two" id="bahaus" data-audio-file="windowsding.mp3"> <img src="images/bahaus.png">aquarius</button>
+       <button class="resize two" id="bauhaus" data-audio-file="windowsding.mp3"> <img src="images/bauhaus.png">aquarius</button>
         <!-- pisces -->
         <button class="resize three" id="gothic" data-audio-file="ding5.mp3"> <img src="images/gothic.png">pisces</button>
        <!-- aries -->
